# SimRoki

./: .gitignore  Cargo.toml  PROMPT.md  README.md  feedback_walk.py  gait_lab.py  generate_charts.py  record_and_split.py  robofest_run.py  robot_config.toml  walk_v3.py
RL/: gym_env.py  launch_sims.sh  play_best.py  train_sac.py
RL/KNP/: README_INTEGRATION.md  README_KNP_COMPLETE.md  desktop_rl_env.py  knp_walk_kick_best.npz  knp_walk_kick_train.py  knp_walk_kick_training.json  knp_walk_scaffold.py  play_best_knp_walk.py  play_best_knp_walk_kick.py  ppo_walk_policy.pt  torch_walk_debug.py  train_walk_knp_mnist_style.py  train_walk_ppo.py
RL/KNP/mnist_style_walk/: walk_forward_best_mnist_style.npz  walk_forward_history.json
docs/: SAC_TRAINING_REPORT.md
native_app/: Cargo.toml
native_app/src/: main.rs
python-sdk/: PROTOCOL.md  README.md  pyproject.toml  servo_sliders.py
python-sdk/examples/: stand.py  walk_in_place.py
python-sdk/robot_sim/: __init__.py
scripts/: control_stand.ps1  run_desktop.ps1
sim_core/: Cargo.toml
sim_core/src/: config.rs  lib.rs
