[package]
name = "native_app"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
macroquad.workspace = true
serde.workspace = true
serde_json.workspace = true
sim_core = { path = "../sim_core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
