[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-sim-client"
version = "0.1.0"
description = "Minimal Python SDK and CLI for the robot simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
simctl = "robot_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_sim*"]

